--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,4 +8,7 @@ include(${ROOT_USE_FILE})
 include(uTOF)
 
 set(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_SOURCE_DIR}/..)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR})
+
 add_subdirectory(dataFormat)
+add_subdirectory(utils)
