--- a/src/dataFormat/CMakeLists.txt
+++ b/src/dataFormat/CMakeLists.txt
@@ -3,11 +3,13 @@ set(MODULE dataFormat)
 set(SOURCES
     Hit.cxx
     Channel.cxx
+    Writer.cxx
     )
 
 set(HEADERS
     Hit.h
     Channel.h
+    Writer.h
     )
 
 uTOF_GENERATE_LIBRARY()
