WIP: Implementation of uTOF::StripWriter and executable
This allows one to read from the uTOFtree input and create a uTOFstrip output where only the channels belonging to a given strip are stored.

--- a/src/dataFormat/CMakeLists.txt
+++ b/src/dataFormat/CMakeLists.txt
@@ -4,12 +4,14 @@ set(SOURCES
     Hit.cxx
     Channel.cxx
     Writer.cxx
+    StripWriter.cxx
     )
 
 set(HEADERS
     Hit.h
     Channel.h
     Writer.h
+    StripWriter.h
     )
 
 uTOF_GENERATE_LIBRARY()
