--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -7,6 +7,10 @@ target_link_libraries(uTOFwriter ${Boost_PROGRAM_OPTIONS_LIBRARY} uTOFdataFormat
 add_executable(uTOFstripWriter stripWriter.cxx)
 target_link_libraries(uTOFstripWriter ${Boost_PROGRAM_OPTIONS_LIBRARY} uTOFdataFormat)
 		      
+add_executable(uTOFcalib stripCalib.cxx)
+target_link_libraries(uTOFcalib ${Boost_PROGRAM_OPTIONS_LIBRARY} uTOFdataFormat uTOFcalibration)
+		      
 install(TARGETS uTOFwriter RUNTIME DESTINATION bin)
 install(TARGETS uTOFstripWriter RUNTIME DESTINATION bin)
+install(TARGETS uTOFcalib RUNTIME DESTINATION bin)
 
